--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom MVC</title>
-    <script type="application/javascript" src="js/mvc.js"></script>
     <style>
         #list {
             width: 200px;
@@ -20,6 +19,11 @@
         <button id="plusBtn">+</button>
         <button id="minusBtn">-</button>
     </div>
+    <script src="js/event.js"></script>
+    <script src="js/model.js"></script>
+    <script src="js/view.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
