--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
         <button id="plusBtn">+</button>
         <button id="minusBtn">-</button>
     </div>
-    <script src="js/event.js"></script>
-    <script src="js/model.js"></script>
-    <script src="js/view.js"></script>
-    <script src="js/controller.js"></script>
-    <script src="js/index.js"></script>
+    <script data-main="js/index" src="node_modules/requirejs/require.js"></script>
 </body>
 
 </html>
