--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Custom MVC</title>
-    <style>
-        #list {
-            width: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
